# Xplace

./: .gitignore  BENCHMARK.md  CMakeLists.txt  LICENSE  README.md  main.py  main_train_fno.py  xplace_wrapper.py
FNO/: Adam.py  FN.py  __init__.py  data_generator.py  train_fn.py  train_fn_buffer.py  utilities.py
cpp_to_py/: .clang-format  CMakeLists.txt  README.md  __init__.py
cpp_to_py/common/: CMakeLists.txt  common.h
cpp_to_py/common/db/: BsRouteInfo.h  Cell.cpp  Cell.h  Database.cpp  Database.h  DatabaseClass.h  DesignRule.cpp  DesignRule.h  GCellGrid.h  Geometry.cpp  Geometry.h  Layer.cpp  Layer.h  Net.cpp  Net.h  Pin.cpp  Pin.h  Region.cpp  Region.h  Row.h  SNet.h  Setting.cpp  Setting.h  Site.h  SiteMap.cpp  SiteMap.h  Via.h
cpp_to_py/common/io/: bison_verilog.cpp  file_bkshf_db.cpp  file_constraints.cpp  file_lefdef_db.cpp  file_verilog.cpp
cpp_to_py/common/io/verilog/: verilog_data.hpp  verilog_driver.hpp  verilog_lexer.l  verilog_parser.yy  verilog_scanner.hpp
cpp_to_py/common/lib/: EnumNameMap.h  Helper.h  Liberty.cpp  Liberty.h  LibtertyReader.cpp  Lut.cpp  Lut.h  Timing.cpp  Timing.h  tokenizer.cpp  tokenizer.h  unit.cpp  unit.h  units.hpp
cpp_to_py/common/lib/sdc/: mask.h  object.cpp  object.h  sdc.cpp  sdc.h  sdc.tcl  tokenizer.cpp  tokenizer.h
cpp_to_py/common/lib/spef/: parser-spef.hpp
cpp_to_py/common/utils/: geo.h  log.cpp  log.h  log_level.h  utils.h
cpp_to_py/dct_cuda/: CMakeLists.txt  dct_cuda.cpp  dct_cuda_kernel.cu
cpp_to_py/density_map_cuda/: CMakeLists.txt  density_map_cuda.cpp  density_map_cuda_kernel.cu  density_map_cuda_naive_kernel.cu
cpp_to_py/draw_placement/: CMakeLists.txt  Drawer.cpp  Drawer.h  draw_placement.cpp  global.h
cpp_to_py/flute_cpp/: CMakeLists.txt  flute_cpp.cpp
cpp_to_py/gpudp/: CMakeLists.txt  PyBindCppMain.cpp  README.md
cpp_to_py/gpudp/check/: legality_check.cpp
cpp_to_py/gpudp/db/: dp_torch.cpp  dp_torch.h
cpp_to_py/gpudp/dp/: compute_hpwl.cu  detail_placement.cpp  detailed_place_db.cuh  global_swap_cuda.cu  independent_set_matching_cuda_kernel.cu  k_reorder_cuda.cu  pitch_nested_vector.cuh  utils.cuh
cpp_to_py/gpudp/dp/ism/: adjust_pos.cuh  apply_solution.cuh  auction.cuh  collect_independent_sets.cuh  cost_matrix_construction.cuh  cpu_state.cuh  diamond_search.h  maximal_independent_set.cuh  reduce_min.cuh  shuffle.cuh
cpp_to_py/gpudp/lg/: abacus_legalize.cpp  filler_legalize.cpp  greedy_legalize.cpp  hannan_legalize.h  legalization_db.h  macro_legalize.cpp
cpp_to_py/gpugr/: CMakeLists.txt  PyBindCppMain.cpp  README.md
cpp_to_py/gpugr/db/: GRDatabase.cpp  GRDatabase.h  GRSetting.cpp  GRSetting.h  GrNet.cpp  GrNet.h
cpp_to_py/gpugr/gr/: GPURouter.cu  GPURouter.h  GPURouterTorch.cu  InCellUsage.cuh  MazeRoute.cu  MazeRoute.h  PatternRoute.cpp  PatternRoute.cu  PatternRoute.h  RouteForce.cpp  RouteForce.h
cpp_to_py/gpugr/taskflow/cuda/: cuda_flow.hpp
cpp_to_py/gputimer/: CMakeLists.txt  PyBindCppMain.cpp  base.h
cpp_to_py/gputimer/core/: GPUTimer.cpp  GPUTimer.cu  GPUTimer.h  gputiming.h  levelize.cu  path.cpp  path.cu  propagate.cpp  propagate.cu  rctree.cpp  rctree.cu  spef.cpp  utils.cuh
cpp_to_py/gputimer/db/: GTDatabase.cpp  GTDatabase.h
cpp_to_py/hpwl_cuda/: CMakeLists.txt  hpwl_cuda.cpp  hpwl_cuda_kernel.cu
cpp_to_py/io_parser/: BindHelper.cpp  BindHelper.h  CMakeLists.txt  PyBindCppMain.cpp
cpp_to_py/io_parser/gp/: GPDatabase.cpp  GPDatabase.h
cpp_to_py/node_pos_to_pin_pos_cuda/: CMakeLists.txt  node_pos_to_pin_pos_cuda.cpp  node_pos_to_pin_pos_cuda_kernel.cu
cpp_to_py/routedp/: CMakeLists.txt  PyBindCppMain.cpp
cpp_to_py/wa_wirelength_hpwl_cuda/: CMakeLists.txt  wa_wirelength_hpwl_cuda.cpp  wa_wirelength_hpwl_cuda_kernel.cu
cpp_to_py/wirelength_timing_cuda/: CMakeLists.txt  wirelength_timing_cuda.cpp  wirelength_timing_cuda_kernel.cu
data/: README.md  convert_design_to_torch_data.py  download_data.sh  fix_ispd2015_route.py  remove_fence_in_ispd19_test5.py
examples/: examples.json
src/: __init__.py  calculator.py  database.py  detail_placement.py  evaluator.py  initializer.py  nesterov_optimizer.py  param_scheduler.py  run_placement.py  run_placement_adam.py  run_placement_nesterov.py
src/core/: __init__.py  dct2_fft2.py  electronic_density_layer.py  flute.py  hpwl.py  macro_legalization.py  node_pos_to_pin_pos.py  route_force.py  timing_opt.py  torch_dct.py  wa_wirelength_hpwl.py
tool/: timer.py
tool/cugr_ispd2015_fix/: README.md  run_cugr.py
tool/innovus_ispd2015_fix/: README.md  parse_log.py  update_placement_def.py
tool/innovus_ispd2015_fix/innovus_work/: run_all_route_xplace_route.tcl
utils/: __init__.py  convert_design_to_torch_data.py  get_design_params.py  io_parser.py  logger.py  setup_dataset.py  timer.py  tools.py  visualization.py
